# grugnotes-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
grugnotes_cli/: client.py  config.py  fs.py  main.py  sync_state.py  sync_watch.py
